--- a/index.css
+++ b/index.css
@@ -1,3 +1,60 @@
 #heading {
-    color: red;
+  color: red;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border: 1px solid black;
+}
+
+.header-li {
+  display: inline-block;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.company-name {
+  font-size: 30px;
+  font-weight: bolder;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding: 10px;
+  margin-top: 17px;
+  margin-left: 70px;
+  cursor: pointer;
+}
+
+.search {
+  padding: 10px;
+}
+
+.res-card {
+  width: 200px;
+  border: 1px solid black;
+  padding: 5px;
+  text-align: center;
+  font-size: 15px;
+  margin: 20px;
+  cursor: pointer;
+}
+
+.res-img {
+  width: 100%;
+  height: 200px;
+}
+
+.res-name {
+  font-size: 20px;
+  font-weight: bolder;
+  margin-bottom: 5px;
+}
+
+.res-cuisine {
+  margin-bottom: 5px;
+}
+
+.res-list {
+  display: flex;
+  flex-wrap: wrap;
 }
