--- a/index.css
+++ b/index.css
@@ -6,13 +6,31 @@
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  border: 1px solid black;
+  border: 2px solid black;
+}
+
+.search {
+  display: flex;
+}
+
+.search-button {
+  margin-left: 5px;
+}
+
+.search-button > button {
+  height: 25px;
+}
+
+.search-input {
+  width: 100%;
+  height: 20px;
 }
 
 .header-li {
   display: inline-block;
   padding: 10px;
   cursor: pointer;
+  font-size: 18px;
 }
 
 .company-name {
@@ -21,7 +39,7 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding: 10px;
   margin-top: 17px;
-  margin-left: 70px;
+  margin-left: 200px;
   cursor: pointer;
 }
 
