--- a/index.css
+++ b/index.css
@@ -49,12 +49,16 @@
 
 .res-card {
   width: 200px;
-  border: 1px solid black;
   padding: 5px;
   text-align: center;
   font-size: 15px;
   margin: 20px;
   cursor: pointer;
+  background-color: #f0f0f0;
+}
+
+.res-card :hover {
+  border: 1px solid black;
 }
 
 .res-img {
@@ -80,4 +84,16 @@
 .top-rated-btn {
   padding: 8px;
   margin-left: 10px;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  width: 210px;
+  height: 350px;
+  background-color: #f0f0f0;
+  margin: 20px;
 }
