--- a/index.css
+++ b/index.css
@@ -254,3 +254,13 @@ input:checked + .slider:before {
 .avatar-img {
   width: 100%;
 }
+
+.offline-container {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.oops-text {
+  font-weight: bolder;
+  font-size: 90px;
+}
